# Image-Processing-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CardDetector.h  EnhancedWindow.h  Pipeline.h  PipelineStages.h  Utilities.h  deckTemplate.h  test.h
report/: .latexmkrc  IEEEtran.cls  NECEC07-Paper-Template.tex  conference_101719.tex  final-report.tex
src/: CardDetector.cpp  deckTemplate.cpp  main.cpp
